# time-glass

./: .cursorrules  .gitignore  README.md  cursor-rules.json  cursor-rules.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  remote_control.rs  run.py  test_api.py  test_data.json
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/backend/app/: main.py
backend/backend/app/api/: api.py
backend/backend/app/api/endpoints/: __init__.py  app_usage.py  data.py  plugin.py  query.py  remote_control.py
backend/backend/app/core/: config.py
backend/backend/app/db/: elasticsearch.py  mysql.py
backend/backend/app/models/: __init__.py  api_models.py  app_usage.py  data.py  plugin.py  remote_control.py  time_analysis.py
backend/backend/app/services/: app_usage_service.py  data_service.py  plugin_service.py  query_service.py  remote_control_service.py  scheduled_tasks.py  usage_analysis_service.py
backend/scripts/: es_tools.py  run_all_tests.py
backend/test/: README.md  conftest.py  test_api_endpoints.py  test_data_service.py  test_data_service_simple.py
backend/tools/es/: README_ES_TOOLS.md  check_es_data.py  clear_es_data.py  clear_es_data_force.py  clear_es_index_data.py  manage_es_data.py
database/: plugin_schema.sql  plugin_test_data.sql
frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  app-usage-api.ts  plugin-api.ts  remote-control-api.ts  utils.ts
(+39 files in other folders)
